<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:key="bookSourceManage"
        android:summary="@string/book_source_manage_desc"
        android:title="@string/book_source_manage" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:key="txtTocRuleManage"
        android:summary="@string/config_txt_toc_rule"
        android:title="@string/txt_toc_rule" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_replace"
        android:key="replaceManage"
        android:summary="@string/replace_purify_desc"
        android:title="@string/replace_purify" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_translate"
        android:key="dictRuleManage"
        android:summary="@string/config_dict_rule"
        android:title="@string/dict_rule" />

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/theme_mode"
        android:entryValues="@array/theme_mode_v"
        android:icon="@drawable/ic_cfg_theme"
        android:key="themeMode"
        android:summary="@string/theme_mode_desc"
        android:title="@string/theme_mode" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_cfg_web"
        android:key="webService"
        android:summary="@string/web_service_desc"
        android:title="@string/web_service"
        app:allowDividerBelow="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/auto_task_group"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_auto_page"
            android:key="autoTaskService"
            android:summary="@string/auto_task_service_desc"
            android:title="@string/auto_task_service" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_auto_page"
            android:key="autoTaskManage"
            android:summary="@string/auto_task_manage_desc"
            android:title="@string/auto_task_manage"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/setting"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_backup"
            android:key="web_dav_setting"
            android:summary="@string/web_dav_set_import_old"
            android:title="@string/backup_restore" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_theme"
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            android:title="@string/theme_setting" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_other"
            android:key="setting"
            android:summary="@string/other_setting_s"
            android:title="@string/other_setting"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aboutCategory"
        android:title="@string/other"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_bookmark"
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            android:title="@string/bookmark" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_history"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            android:title="@string/read_record" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_folder_outline"
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            android:title="@string/file_manage" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:key="about"
            android:title="@string/about" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_exit"
            android:key="exit"
            android:title="@string/exit" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
