<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_title"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_title_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_title_mode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/title_left" />

            <RadioButton
                android:id="@+id/rb_title_mode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/title_center" />

            <RadioButton
                android:id="@+id/rb_title_mode3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/title_hide" />
        </RadioGroup>

        <io.legado.app.ui.widget.DetailSeekBar
            android:id="@+id/dsb_title_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:max="10"
            app:title="@string/title_font_size" />

        <io.legado.app.ui.widget.DetailSeekBar
            android:id="@+id/dsb_title_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:max="100"
            app:title="@string/title_margin_top" />

        <io.legado.app.ui.widget.DetailSeekBar
            android:id="@+id/dsb_title_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:max="100"
            app:title="@string/title_margin_bottom" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_header_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="18sp" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_header_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/show_hide" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_header_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/left" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_header_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/middle" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_header_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/right" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textSize="18sp" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_footer_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/show_hide" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_footer_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/left" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_footer_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/middle" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_footer_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/right" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_footer"
            android:textSize="18sp" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_tip_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_color" />

        <io.legado.app.ui.widget.LabeledValueRow
            android:id="@+id/ll_tip_divider_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/tip_divider_color" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>