<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_add_container"
        android:icon="@drawable/ic_add"
        android:title="@string/explore_container_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_explore_group_filter"
        android:icon="@drawable/ic_groups"
        android:title="@string/menu_action_group"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_enable_all"
        android:title="@string/explore_enable_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_all"
        android:title="@string/explore_disable_all"
        app:showAsAction="never" />

</menu>
